--- a/humanoidverse/config/env/decoupled_locomotion_stand_height_waist_wbc_ma_diff_force.yaml
+++ b/humanoidverse/config/env/decoupled_locomotion_stand_height_waist_wbc_ma_diff_force.yaml
@@ -46,7 +46,7 @@ env:
       history_len: 0
     
     # Residual upper body action
-    residual_upper_body_action: True
+    residual_upper_body_action: False
 
     # Force 
     max_force_estimation: True
